--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
   <html lang="en-us">
-    <meta charset="UTF-8">
-    <meta title="Ballet Folkorico Quetzales">
+    <head>
+      <meta charset="UTF-8">
+      <meta title="Ballet Folkorico Quetzales">
+    </head>
     <body>
       <h1>Temporary Hosting. . .</h1>
     </body>
