--- a/bookus.html
+++ b/bookus.html
@@ -8,7 +8,7 @@
 </head>
 <body>	
 	<ul class="main-nav">
-		<li><a href="home.html">Home</a></li>
+		<li><a href="index.html">Home</a></li>
 		<li><a href="events.html">Upcoming Events...</a></li>
 		<li><a href="contact.html">Drop us a line!</a></li>
 		<li><a href="aboutus.html">About Us</a></li>
