--- a/joinus.html
+++ b/joinus.html
@@ -12,7 +12,7 @@
 <br>
 <body>
 	<ul class="main-nav">
-		<li><a href="home.html">Home</a></li>
+		<li><a href="index.html">Home</a></li>
 		<li><a href="events.html">Upcoming Events...</a></li>
 		<li><a href="showcase.html">Meet Quetzales!</a></li>
 		<li><a href="history.html">Our History</a></li>
