--- a/showcase.html
+++ b/showcase.html
@@ -10,7 +10,7 @@
 	<div class="main-nav">
 		<img class="logo" src="images/logo.jpeg" alt-text="Quetzales Logo">
 		<ul class="main-nav">
-			<li><a href="home.html">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="events.html">Upcoming Events...</a></li>
 			<li><a href="history.html">Our History</a></li>
 			<li><a href="joinus.html">Join Quetzales!</a></li>
