--- a/showcase.html
+++ b/showcase.html
@@ -30,8 +30,9 @@
 	</div>
 	<br>
 	<div class="right-bio">
-		<img class="right-pic" src="images/logo.jpeg" alt-text="Picture">
-		<p>This is a picture of the logo</p>
+		<img class="right-pic" src="images/Me_Core.jpg" alt-text="Picture">
+		<h2>Rob Esparza</h2>
+		<p>Rob has been dancing with Ballet Folkorico Quetzales for about a year, Rob is also the lead (and only) Web Developer for Ballet Folkorico Quetzales</p>
 	</div>
 </body>
 </html>
