--- a/history.html
+++ b/history.html
@@ -21,5 +21,13 @@
 	</ul>
 	<br>
 	<h1>History of Ballet Folklorico Quetzales</h1>
+	<div id="intro">
+		<p>A long time ago in a land not so far away...</p>
+	</div>
+	<br>
+	<div id="history">
+		<p>Ballet Folkorico was founded by our Director Jaime Carrasco, in El Paso, Texas.</p>
+		<p>He dedicated much of his time to make the group what it is today.</p>
+	</div>
 </body>
 </html>
