--- a/joinus.html
+++ b/joinus.html
@@ -24,14 +24,17 @@
 	<p>Do you love Ballet Folkorico as much as we do?</p>
 	<p>Join our Ballet Folkorico group, Ballet Folkorico Quetzales!</p>
 	<br>
-	<h2>Practice Schedule</h2>
-	<h2>We hold practices at the David Ortiz Rec Center at the following dates and times:</h2>
-	<ul>
-		<li>Mondays from 6:00 PM to 8:00 PM</li>
-		<li>Wednesdays from 6:00 PM to 8:00 PM</li>
-		<li>Saturdays from 11:00 AM to 1:00 PM</li>
-	</ul>
-	<br>
+	<div id="schedule">
+		<h2>Practice Schedule:</h2>
+		<ul>
+			<li>Mondays from 6:00 PM to 8:00 PM</li>
+			<li>Wednesdays from 6:00 PM to 8:00 PM</li>
+			<li>Saturdays from 11:00 AM to 1:00 PM</li>
+		</ul>
+		<p>We meet at the David Ortiz Recreation Center,</p>
+		<p>located at 563 N Carolina St</p>
+	</div>
+		<br>
 	<h2>Frequently Asked Questions</h2>
 	<details>
 		<summary>How much is it to join Ballet Folkorico Quetzales?</summary>
